content/en/docs/05/ingress-mobi.template.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-web-go
spec:
  rules:
    - host: example-web-go-<namespace>.phoenix.mobicorp.test
      http:
        paths:
          - path: /
            backend:
              serviceName: example-web-go
              servicePort: 5000
