content/en/docs/05/ingress.template.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-web-python
spec:
  rules:
    - host: example-web-python-<namespace>.<domain>
      http:
        paths:
          - path: /
            backend:
              serviceName: example-web-python
              servicePort: 5000
